@@ -27,8 +27,8 @@ __RCSID("$NetBSD: tdelete.c,v 1.2 1999/09/16 11:45:37 lukem Exp $");
 /* delete node with given key */
 void *
 _DEFUN(tdelete, (vkey, vrootp, compar),
-	const void *vkey _AND	/* key to be deleted */
-	void      **vrootp _AND	/* address of the root of tree */
+	const void *__restrict vkey _AND	/* key to be deleted */
+	void      **__restrict vrootp _AND	/* address of the root of tree */
 	int       (*compar)(const void *, const void *))
 {
 	node_t **rootp = (node_t **)vrootp;
